<resources>
    <string name="app_name">ElectronicMusicGuide</string>
    <string name="title_text">Android Guide\nto\nElectronic Music</string>
    <string name="house">House</string>
    <string name="techno">Techno</string>
    <string name="dubstep">Dubstep</string>
    <string name="dnb">DNB</string>
    <string name="garage">Garage</string>
    <string name="housedescription">House is one of the most popular forms of EDM. It\'s almost three decades old, and is one of the truly American-born styles. It grew in Chicago, rising from the aftermath of disco, and the "four-to-the-floor" sound is one of the most recognizable forms of EDM in clubs and on the mainstream. That\'s right, everyone from David Guetta to Zedd are currently ruling the radio with their distinct brands of house music.</string>
    <string name="technoscription">Techno is NOT a way to describe all of electronic music, but it is one of the genres that\'s been around the longest. Another American-born style, techno got its start in Detroit, where DJs loved the sounds of Kraftwerk, Yellow Magic Orchestra, and Giorgio Moroder, but wanted to inject some soul into the deep digital sounds. Detroit\'s techno scene grew steadily with the likes of Juan Atkins and Derrick May helping nurture the foundation, and once Europe got a hold of the sound, it exploded, spawning a number of different scenes worldwide, with everyone from U2 to Madonna using the long-loved style in their own work. Today, you can find artists like Richie Hawtin and Nicole Moudaber still crafting proper techno productions.</string>
    <string name="dubstepscription">Contrary to popular belief, dubstep was not directly born from a love of dub music; it started as a darker, more experimental take on the 2-step sound that was running through London in the late 1990s. Clocking in at 140BPM, the early sound of dubstep was far from the aggressive tracks that are associated with the genre today. Early incarnations of dubstep are over a decade old, but the sound really started to grow in 2005, with DJs like John Peel and Mary Anne Hobbs helping bring the exciting new flavor to UK radio. Today, the sound is far from a London thing, and spent many years as the genre to many of today\'s EDM fans.</string>
    <string name="dnbdescription">Drum and Bass might be one of the most intense, misunderstood sounds within the EDM scene. While its roots are in the hardcore rave scene of London in the early 1990s, it mutated into a darker, more sinister sound all to its own, gobbling up reggae/dancehall sub-bass with sped-up breakbeats. Clocking in at 160-180 BPMs, the obvious emphasis on the drum work and bassline gives dnb its name. Over the years, it has encompassed a number of sounds, with subgenres incorporating jazz, soul, hip-hop, and even other EDM styles like trance.</string>
    <string name="garagedescription">Garage was born from house music, but relied heavily on more time-shifting in the beats, as well as much more emphasis on vocal samples (literally grabbing phrases from lyrics as opposed to using an entire verse). While Todd Edwards was seen as the creator of this sound, it wasn\'t until the garage tracks were brought to the UK and played at a slightly faster tempo that the "UK garage" scene was born. The scene flourished in the UK, birthing sounds like speed garage, 2-step, bassline, and while the garage sound has seen its highs and lows, acts like Joy Orbison and Disclosure are putting their own spin on the sound today.</string>
</resources>
