<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.robert.electronicmusicguide.MainActivity"
    android:background="@drawable/back2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor="@color/yellow"
            android:layout_weight="4"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="48dp"
            android:textStyle="bold"

            android:text="@string/title_text"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_weight="6"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
                <Button
                    android:id="@+id/house_button"
                    style="@style/genereButtonStyle"
                    android:text="@string/house"/>
                <Button
                    android:id="@+id/techno_button"
                    style="@style/genereButtonStyle"
                    android:text="@string/techno"/>
                <Button
                    android:id="@+id/dubstep_button"
                    style="@style/genereButtonStyle"
                    android:text="@string/dubstep"/>
                <Button
                    android:id="@+id/dnb_button"
                    style="@style/genereButtonStyle"
                    android:text="@string/dnb"/>
                <Button
                    android:id="@+id/garage_button"
                    style="@style/genereButtonStyle"
                    android:text="@string/garage"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
